--- a/0625_python_define_&_class.ipynb
+++ b/0625_python_define_&_class.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMSaiojfwS9N7opllXSsti4",
+      "authorship_tag": "ABX9TyOOFEeq096yeQ5sh/2pe7Qv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "GspzlwHLVwfS"
       },
@@ -73,7 +73,7 @@
         "id": "LQKldE20fvuZ",
         "outputId": "8de70284-ee9e-48b2-8fc4-d6423d6de3c1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "id": "x4qoGoCLgDmW",
         "outputId": "eea8395e-bebe-4cf2-c34f-8056a69c282c"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
         "id": "tYmQFBfKh82M",
         "outputId": "4b800337-9f63-418b-fae1-c5b503787ae0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
         "id": "_RsFTeUditSi",
         "outputId": "f0e6268a-9368-4b0b-b083-da2161983192"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
         "id": "xEmj4QrYl5UJ",
         "outputId": "5e21cdb3-c2ac-4207-e27e-ecd2e8dca92a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +268,7 @@
       "metadata": {
         "id": "CDxTYEnHmD09"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "ZV-tU6_wmOu-"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,6 +319,247 @@
         "id": "SO1ks8CEtR7K"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**방향 전환**"
+      ],
+      "metadata": {
+        "id": "t8X9YFlkwHVh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def turn(self, direction):\n",
+        "    print(f\"{self.name} {direction} 방향으로 회전 중.\")"
+      ],
+      "metadata": {
+        "id": "6UcoCxO6wJIt"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**속도 표시**"
+      ],
+      "metadata": {
+        "id": "EM8eW6umwOGT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def show_speed(self):\n",
+        "    print(f\"{self.name} 현재 속도는 {self.speed}km/h입니다.\")"
+      ],
+      "metadata": {
+        "id": "6s5sii3HwO7S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**장애물 감지**"
+      ],
+      "metadata": {
+        "id": "N8rjN1DpwRAq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def detect_obstacle(self, distance):\n",
+        "    if distance < 10:\n",
+        "        print(\"⚠️ 장애물 감지! 정지합니다.\")\n",
+        "        self.stop()\n",
+        "    else:\n",
+        "        print(\"도움말: 도로 이상 없음.\")"
+      ],
+      "metadata": {
+        "id": "f43XUuLgwTPC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**직진 주행**"
+      ],
+      "metadata": {
+        "id": "r0RkPVSWwU31"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def drive(self):\n",
+        "    self.speed += 10\n",
+        "    print(f\"{self.name} 주행 중... 속도: {self.speed}km/h\")"
+      ],
+      "metadata": {
+        "id": "3yG6fovhwXm6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**정지**"
+      ],
+      "metadata": {
+        "id": "ADf-10n-wYuY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def stop(self):\n",
+        "    self.speed = 0\n",
+        "    print(f\"{self.name} 정지.\")"
+      ],
+      "metadata": {
+        "id": "QHMLKqhXwbDk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**객체 감지 클래스**"
+      ],
+      "metadata": {
+        "id": "Xap7AlSGwetJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ObjectDetector:\n",
+        "    def detect(self, frame):\n",
+        "        # 예시: 프레임에서 객체 감지 (가상)\n",
+        "        return [(\"car\", 100, 200, 150, 250)]"
+      ],
+      "metadata": {
+        "id": "iIrd8cqGwhK6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**차량 정보 클래스**"
+      ],
+      "metadata": {
+        "id": "hJiUJNS1wi5_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Vehicle:\n",
+        "    def __init__(self, model, speed=0):\n",
+        "        self.model = model\n",
+        "        self.speed = speed\n",
+        "\n",
+        "    def accelerate(self):\n",
+        "        self.speed += 10\n",
+        "\n",
+        "    def stop(self):\n",
+        "        self.speed = 0"
+      ],
+      "metadata": {
+        "id": "46Va_qT9wlDs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**센서 입력 처리 클래스**"
+      ],
+      "metadata": {
+        "id": "TErXBGMowm9k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Sensor:\n",
+        "    def __init__(self, name):\n",
+        "        self.name = name\n",
+        "\n",
+        "    def read(self):\n",
+        "        print(f\"{self.name} 센서 값 읽는 중...\")"
+      ],
+      "metadata": {
+        "id": "NEg_dhT1wpj_"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**객체 추적 클래스**"
+      ],
+      "metadata": {
+        "id": "wQ6goKY1ws_n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class VehicleTracker:\n",
+        "    def __init__(self):\n",
+        "        self.tracks = {}\n",
+        "        self.next_id = 0\n",
+        "\n",
+        "    def update_tracks(self, detections):\n",
+        "        for det in detections:\n",
+        "            self.tracks[self.next_id] = det\n",
+        "            self.next_id += 1"
+      ],
+      "metadata": {
+        "id": "kYhrh9LCwvVZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**주행 판단 클래스**"
+      ],
+      "metadata": {
+        "id": "xYxF6tqBwxEg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DrivingController:\n",
+        "    def make_decision(self, detections):\n",
+        "        if len(detections) > 0:\n",
+        "            return \"감속\"\n",
+        "        else:\n",
+        "            return \"정상 주행\""
+      ],
+      "metadata": {
+        "id": "MW1DfORXwzF4"
+      },
+      "execution_count": 34,
       "outputs": []
     }
   ]
