--- a/지도학습.md
+++ b/지도학습.md
@@ -1,1 +1,30 @@
+# 자율주행에서 지도학습(Supervised Learning)의 활용
+## 지도학습이란?
+- 입력 데이터와 그에 대한 **정답(Label)**이 함께 주어지는 학습 방식
+- 모델은 입력 → 정답의 관계를 학습하여 새로운 입력에 대해 정답을 예측할 수 있게 됨
 
+
+## 학습 방법 요약
+1. 데이터 수집
+- 실제 도로에서 센서 데이터를 수집
+
+2. 데이터 라벨링
+- 객체 위치, 차선, 조향각 등 라벨 부여
+
+3. 모델 학습
+- 입력(센서 데이터) → 출력(정답) 관계를 학습
+
+4. 테스트 및 튜닝
+- 실제 도로 주행 전 시뮬레이션 테스트
+
+5. 배포 및 추론
+- 학습된 모델을 차량에 탑재하여 실시간 사용
+
+## 대표적인 지도학습 모델
+- CNN (Convolutional Neural Network)이미지 기반 객체 인식, 차선 검출
+
+- ResNet, EfficientNet 고성능 이미지 분류 백본
+
+- LSTM, GRU 시계열 데이터 기반 행동 예측
+
+- Transformers 멀티센서 데이터 융합에 활용
