--- a/지도학습.md
+++ b/지도학습.md
@@ -3,6 +3,13 @@
 - 입력 데이터와 그에 대한 **정답(Label)**이 함께 주어지는 학습 방식
 - 모델은 입력 → 정답의 관계를 학습하여 새로운 입력에 대해 정답을 예측할 수 있게 됨
 
+| 분야                             | 설명                                                | 예시                             |
+|----------------------------------|-----------------------------------------------------|----------------------------------|
+| 객체 인식 (Object Detection)     | 카메라 이미지에서 사람, 차량, 신호등 등을 인식     | YOLO, Faster R-CNN               |
+| 차선 인식 (Lane Detection)       | 도로의 차선 라인을 이미지로부터 추출              | SCNN, U-Net 기반 차선 검출       |
+| 신호등 인식 (Traffic Light Classification) | 신호등 색상(빨강, 노랑, 초록)을 분류               | CNN 기반 분류 모델               |
+| 행위 예측 (Behavior Prediction)  | 주변 차량/보행자의 움직임 예측                    | LSTM 기반 예측 모델              |
+| 주행 경로 예측 (Path Planning Prediction) | 지도와 주변 상황을 바탕으로 차량의 이동 경로 예측 | End-to-End 주행 모델             |
 
 ## 학습 방법 요약
 1. 데이터 수집
